--- a/kristen-html/search.html
+++ b/kristen-html/search.html
@@ -13,7 +13,7 @@
     </style>
   </head>
   <body>
-    <head style="text-align:center">Search Results</head><br>
+    <h1 style="text-align:center">Search Results</h1><br>
     <result style="text-align:left">Search result 1</result><br>
     <result style="text-align:left">Search result 2</result><br>
     <result style="text-align:left">Search result 3</result><br>
