--- a/kristen-html/search.html
+++ b/kristen-html/search.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <base target="_blank">
     <title>Search Results</title>
-    <meta name="description" content="Search result page">
-    <meta name="keywords" content="HTML,CSS,Python,Django">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
     <meta name="author" content="Kristen Deppe">
     <meta charset="UTF-8">
     <style type="text/css">
